[tool.poetry]
name = "cogment-verse"
version = "0.1.0"
description = ""
authors = ["AI Redefined Inc. <dev+cogment@ai-r.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
taskipy = "^1.8.1"
pylint = "^2.9.6"

[tool.taskipy.tasks]
lint_pylint = "find . -name '*.py' | xargs pylint"
lint_black = "black --diff ."
lint_black_fix = "black ."
lint = "task lint_black && task lint_pylint"
lint_fix = "task lint_black_fix"

[tool.black]
line-length = 120
target-version = ["py37"]
extend-exclude = '''
/(
  .*/third_party/.*
)/
'''
# color = true

[tool.pylint.MASTER]
disable=[
  "C0330", "C0326", "C0199", "C0412", # Disable checks in conflict with black
  "line-too-long", # Dealt with by black
  "import-error", "no-name-in-module", # Import checks don't work given the way the projects are setup
  "missing-module-docstring", "missing-function-docstring", "missing-class-docstring", # Don't require docstrings for this demo code
  "logging-fstring-interpolation",
  "broad-except",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-locals",
  "too-many-statements",
  "too-many-branches",
  "too-many-function-args",
  "too-many-instance-attributes",
  "attribute-defined-outside-init", # seems to be buggy
  "fixme", # Don't consider TODO as errors
  "duplicate-code", # This is a stupid test
]
ignore-patterns=[".*_pb2.py",".*_pb2_grpc.py","cog_settings.py"]
ignore-paths=[".*/third_party/.*", ".*/node_modules/.*"]
jobs=0
[tool.pylint.LOGGING]
logging-format-style="new"

[tool.pylint.FORMAT]
good-names=["i","j","k","c","h","w","x","id","f","to"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
