[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py39"]
color = true

[tool.pylint.MASTER]
disable=[
  "ungrouped-imports", "line-too-long", # Disable checks in conflict with black
  "missing-module-docstring", "missing-function-docstring", "missing-class-docstring", # Don't require docstrings (yet)
  "logging-fstring-interpolation",
  "fixme", # Don't consider TODO as errors
  "no-value-for-parameter", # seems to be buggy
  # The following are basically stupid tests
  "duplicate-code",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-function-args",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-statements",
]
ignore-patterns=[".*_pb2.py",".*_pb2_grpc.py","cog_settings.py"]
ignore-paths=[
  ".*/node_modules/.*",
  ".*/_old/.*",
  ".*/.venv/.*"
]
jobs=0

[tool.pylint.LOGGING]
logging-format-style="new"

[tool.pylint.FORMAT]
good-names=["i","j","k","c","h","w","x","id","f","to"]

[tool.pylint.Typecheck]
generated-members=["cv2", "torch"]

[tool.pytest.ini_options]
addopts = "-rfs --ignore=_old"
