[metadata]
name = cogment-verse
version = 0.1.0
description = cogment verse python SDK
author = AI Redefined Inc.
author_email = dev+cogment@ai-r.com
license = Apache-2.0

[options]
packages = find:
python_requires = >=3.7
install_requires =
  cogment[generate]==2.1.1
  names_generator~=0.1.0
  mlflow~=1.21.0
