[tool.poetry]
name = "cogment-verse-client"
version = "0.1.0"
description = ""
authors = ["AI Redefined Inc. <dev+cogment@ai-r.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
grpcio = "^1.38.0"
click = "^8.0.1"
cogment = {extras = ["generate"], version = "^2.1.0"}
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
taskipy = "^1.8.1"
grpcio-tools = "^1.38.0"

[tool.taskipy.tasks]
generate = "python -m grpc.tools.protoc --proto_path=. --python_out=. --grpc_python_out=. ./run_api.proto && python -m cogment.generate"
build = "task generate"
start = "python -m main"

[tool.black]
line-length = 120
target-version = ["py37"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
