[tool.poetry]
name = "cogment-verse-environment"
version = "0.1.0"
description = ""
authors = ["AI Redefined Inc. <dev+cogment@ai-r.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
atari-py = "0.2.9"
cogment = {extras = ["generate"], version = "^1.3.1"}
gym = {version = "0.18.0", extras = ["atari", "box2d"]}
gym-tetris = "^3.0.2"
minatar = {git = "https://github.com/kenjyoung/MinAtar.git", rev = "f1387b4123ea5a0203c81b2d3ad9572a8cc578cf"}
PettingZoo = "^1.11.1"
pyglet = "^1.4"
pygame = "^2.0.2"
python-dotenv = "^0.19.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
taskipy = "^1.9.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
coverage = "^6.0.2"
pytest-asyncio = "^0.16.0"

[tool.taskipy.tasks]
retrieve_roms = "mkdir -p .atari_roms && curl -s http://www.atarimania.com/roms/Roms.rar -o .atari_roms/roms.rar && unrar x -r .atari_roms/roms.rar .atari_roms/"
import_roms = "python -m atari_py.import_roms .atari_roms"
generate_protos = "python -m cogment.generate"
build = "task import_roms && task generate_protos"
start = "python -m main"
unit_tests = "python -m pytest --cov=. --cov-report term-missing tests"
coverage = "coverage html -i"
test="task unit_tests && task coverage"

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.pytest.ini_options]
addopts = "-rfs"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
